--- a/travel.html
+++ b/travel.html
@@ -3,9 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
 </head>
 <body>
-    
+    <a href="#skip">Skip to Main Content</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "pets.html">Pets</a></li>
+                <li><a href = "recipe.html">Recipes</a></li>
+                <li><a href = "travel.html">Travel</a></li>
+            </ul>
+        </nav>
+        <h1>Week Two discussion</h1>
+    </header>
+    <main id = "skip"> 
+        <h1>Travel</h1>
+        <div>
+            <h2>Pelosi</h2>
+            <img src="icolosseum-rome.gif" width = "400" alt="">
+            <img src="colosseum-rome.jpg" width = "400" alt="">
+            <h3>Geographical Location: Europe</h3>
+            <p>Rome is one of the oldest metropolitan areas in the world. With a history dating back to 700 BC with the birth of the Roman Empire, the city has maintained its status as a cultural and historical hub of Europe. The city is peppered with ancient monuments, statues, and piazzas from different eras of history. The most famous location, the Colosseum, is touted as one of the seven modern wonders of the world. Rome houses several world famous museums, such as the Borghese and the Vatican Museum. It is also the only city in the world to encompass a recognized country, Vatican City.</p>
+            <p>Rome is also a great location for food, wine, and leisure. At the heart of Italy, Rome is a central gathering place for a diverse array of Italian cuisine; Neapolitan Pizza from the south, Tuscan wine, and truffle from the north. Rome’s most famous dish is carbonara. Beyond the food, Rome has a vibrant nightlife. The Trastevere neighborhood has plenty of bars and clubs for patrons and, just over the river, Centro’s shopping district is always bustling.</p>
+
+            <h3>Photo Gallery</h3>
+            <img src="images/trevi-fountain-rome.jpg" width = "400" alt="">
+            <figcaption>A decorated marble fountain with several roman statues dancing.<figcaption>
+            <img src="images/vatican-rome.jpg" width = "400" alt="">
+            <figcaption>An aerial view of a circular forum outlined with ornate columns.<figcaption>
+            <img src="images/spanish-steps-rome.jpg" width = "400" alt="">
+            <figcaption>Decorative steps sitting behind a fountain with a small church at the top.<figcaption>
+            <img src="images/roman-forum-rome.jpg" width = "400" alt="">
+            <figcaption>A ruin of large columns supporting a roof surrounded by smaller ruins.<figcaption>
+            <img src="images/Victor-emmanuel-rome.jpg" width = "400" alt="">
+            <figcaption>An ornate marble building with bronze statues of angels and chariots, and the Italian flag on either side.<figcaption>
+            <!-- Frank Pelosi -->
+        </div>
+
+        <div>
+            <h2>Lake Tahoe</h2>
+            <img src="images/nature-river.gif" width = "400" alt="gif">
+            <img src="images/laketahoe.jpeg" width = "400" alt="lake tahoe">
+            <h3>Geographical Location: North America</h3>
+            <p>When it comes to things to do in South Lake Tahoe, you can shred down the mountain from 10,067 ft. at Heavenly Mountain Resort’s peak or you can dive into the depths of Lake Tahoe. It’s more than 1600 ft. deep, making it one of the deepest lakes in North America. Needless to say, there’s plenty of things to do in Lake Tahoe above and below the surface.</p>
+            <p>All parts of Lake Tahoe are beautiful and have something unique to offer. South Lake Tahoe is popular for its ski resorts like Heavenly, Sierra at Tahoe and Kirkwood ski resorts. South Lake Tahoe is also popular for its restaurants, shopping, casino resorts and vibrant nightlife.</p>
+            <h3>Photo Gallery</h3>
+            <img src="images/StatelineLakeTahoeCam.jpg" width = "400" alt="">
+            <figcaption>Stateline Lake Tahoe</figcaption>
+            <img src="images/tahoe_beach_retreat_aerial.jpg" width = "400" alt="">
+            <figcaption>Tahoe beach retreat aerial</figcaption>
+            <img src="images/kid.webp" width = "400" alt="">
+            <figcaption>Best thing to do in lake tahoe before summer ends</figcaption>
+            <img src="images/Firepit_at_Zephyr_Cove_RV_Park.jpeg" width = "400" alt="">
+            <figcaption>Firepit at Zephyr Cove RV Park</figcaption>
+            <img src="images/Hikers_watching_sunset.jpg" width = "400" alt="">
+            <figcaption>Hikers watching sunset</figcaption>
+            <!-- Catherine Zhou & Hellen Tong -->
+
+        </div>
+        <div>
+            <h2>LA</h2>
+            <img src="images/los-angeles-california-bustle.gif" width = "400" alt="k">
+            <img src="los_angeles.jpeg" width = "400" alt="">
+            <h3>Geographical Location: North America</h3>
+            <p>Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. Near its iconic Hollywood sign, studios such as Paramount Pictures, Universal and Warner Brothers offer behind-the-scenes tours. On Hollywood Boulevard, TCL Chinese Theatre displays celebrities’ hand- and footprints, the Walk of Fame honors thousands of luminaries and vendors sell maps to stars’ homes.</p>
+            <p>Los Angeles is famous for its idyllic, warm climate. Temperatures are high but pleasant all year round while rainfall is uncommon and mainly limited to the winter months.</p>
+            <h3>Photo Gallery</h3>
+            <img src="images/downtown_la.jpeg" width = "400" alt="">
+            <figcaption>Downtown Los Angeles</figcaption>
+            <img src="images/skyline_la.jpeg" width = "400" alt="">
+            <figcaption>The LA skyline set against the San Gabriel Mountains in the background.</figcaption>
+            <img src="images/city_hall_la.jpeg" width = "400" alt="">
+            <figcaption>Los Angeles City Hall with twin towns fingerpost</figcaption>
+            <img src="images/hollywood_sign.jpeg" width = "400" alt="">
+            <figcaption>Los angeles california hollywood sign close up</figcaption>
+            <img src="images/houses_hill.jpeg" width = "400" alt="">
+            <figcaption>View of Houses on a Hill on Highland Ave, Los Angeles, California, USA</figcaption>
+            <!-- Iris Sirui Wang & Sue Yixin Wang -->
+        </div>
+    </main>
 </body>
 </html>
