--- a/travel.html
+++ b/travel.html
@@ -27,21 +27,19 @@
             <h3>Geographical Location: Europe</h3>
             <p>Rome is one of the oldest metropolitan areas in the world. With a history dating back to 700 BC with the birth of the Roman Empire, the city has maintained its status as a cultural and historical hub of Europe. The city is peppered with ancient monuments, statues, and piazzas from different eras of history. The most famous location, the Colosseum, is touted as one of the seven modern wonders of the world. Rome houses several world famous museums, such as the Borghese and the Vatican Museum. It is also the only city in the world to encompass a recognized country, Vatican City.</p>
             <p>Rome is also a great location for food, wine, and leisure. At the heart of Italy, Rome is a central gathering place for a diverse array of Italian cuisine; Neapolitan Pizza from the south, Tuscan wine, and truffle from the north. Rome’s most famous dish is carbonara. Beyond the food, Rome has a vibrant nightlife. The Trastevere neighborhood has plenty of bars and clubs for patrons and, just over the river, Centro’s shopping district is always bustling.</p>
-
             <h3>Photo Gallery</h3>
             <img src="images/trevi-fountain-rome.jpg" width = "400" alt="trevi-fountain-rome">
-            <figcaption>A decorated marble fountain with several roman statues dancing.<figcaption>
+            <p>A decorated marble fountain with several roman statues dancing.</p>
             <img src="images/vatican-rome.jpg" width = "400" alt="vatican-rome">
-            <figcaption>An aerial view of a circular forum outlined with ornate columns.<figcaption>
+            <p>An aerial view of a circular forum outlined with ornate columns.</p>
             <img src="images/spanish-steps-rome.jpg" width = "400" alt="spanish-steps-rome">
-            <figcaption>Decorative steps sitting behind a fountain with a small church at the top.<figcaption>
+            <p>Decorative steps sitting behind a fountain with a small church at the top.</p>
             <img src="images/roman-forum-rome.webp" width = "400" alt="roman-forum-rome">
-            <figcaption>A ruin of large columns supporting a roof surrounded by smaller ruins.<figcaption>
+            <p>A ruin of large columns supporting a roof surrounded by smaller ruins.</p>
             <img src="images/victor-emmanuel-rome.jpg" width = "400" alt="victor-emmanuel-rome">
-            <figcaption>An ornate marble building with bronze statues of angels and chariots, and the Italian flag on either side.<figcaption>
+            <p>An ornate marble building with bronze statues of angels and chariots, and the Italian flag on either side.</p>
             <!-- Frank Pelosi -->
         </div>
-
         <div>
             <h2>Lake Tahoe</h2>
             <img src="images/nature-river.gif" width = "400" alt="nature-river">
@@ -51,17 +49,16 @@
             <p>All parts of Lake Tahoe are beautiful and have something unique to offer. South Lake Tahoe is popular for its ski resorts like Heavenly, Sierra at Tahoe and Kirkwood ski resorts. South Lake Tahoe is also popular for its restaurants, shopping, casino resorts and vibrant nightlife.</p>
             <h3>Photo Gallery</h3>
             <img src="images/StatelineLakeTahoeCam.jpg" width = "400" alt="StatelineLakeTahoeCam">
-            <figcaption>Stateline Lake Tahoe</figcaption>
+            <p>Stateline Lake Tahoe</p>
             <img src="images/tahoe_beach_retreat_aerial.jpg" width = "400" alt="tahoe_beach_retreat_aerial">
-            <figcaption>Tahoe beach retreat aerial</figcaption>
+            <p>Tahoe beach retreat aerial</p>
             <img src="images/kid.webp" width = "400" alt="kid">
-            <figcaption>Best thing to do in lake tahoe before summer ends</figcaption>
+            <p>Best thing to do in lake tahoe before summer ends</p>
             <img src="images/Firepit_at_Zephyr_Cove_RV_Park.jpeg" width = "400" alt="Firepit_at_Zephyr_Cove_RV_Park">
-            <figcaption>Firepit at Zephyr Cove RV Park</figcaption>
+            <p>Firepit at Zephyr Cove RV Park</p>
             <img src="images/Hikers_watching_sunset.jpg" width = "400" alt="Hikers_watching_sunset">
-            <figcaption>Hikers watching sunset</figcaption>
+            <p>Hikers watching sunset</p>
             <!-- Catherine Zhou & Hellen Tong -->
-
         </div>
         <div>
             <h2>LA</h2>
@@ -72,15 +69,15 @@
             <p>Los Angeles is famous for its idyllic, warm climate. Temperatures are high but pleasant all year round while rainfall is uncommon and mainly limited to the winter months.</p>
             <h3>Photo Gallery</h3>
             <img src="images/downtown_la.jpeg" width = "400" alt="downtown_la">
-            <figcaption>Downtown Los Angeles</figcaption>
+            <p>Downtown Los Angeles</p>
             <img src="images/skyline_la.jpg" width = "400" alt="skyline_la">
-            <figcaption>The LA skyline set against the San Gabriel Mountains in the background.</figcaption>
+            <p>The LA skyline set against the San Gabriel Mountains in the background.</p>
             <img src="images/city_hall_la.jpeg" width = "400" alt="city_hall_la">
-            <figcaption>Los Angeles City Hall with twin towns fingerpost</figcaption>
+            <p>Los Angeles City Hall with twin towns fingerpost</p>
             <img src="images/hollywood_sign.jpeg" width = "400" alt="hollywood_sign">
-            <figcaption>Los angeles california hollywood sign close up</figcaption>
+            <p>Los angeles california hollywood sign close up</p>
             <img src="images/houses_hill.jpeg" width = "400" alt="houses_hill">
-            <figcaption>View of Houses on a Hill on Highland Ave, Los Angeles, California, USA</figcaption>
+            <p>View of Houses on a Hill on Highland Ave, Los Angeles, California, USA</p>
             <!-- Iris Sirui Wang & Sue Yixin Wang -->
         </div>
     </main>
