--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
+    <title>Home</title>
 </head>
 <body>
-    <a href = "#skip">Skip to Main Content</a>
+    <a href="#skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -20,8 +20,7 @@
     </header>
     <main id="skip">
         <div>
-            <p>Welcome to [insert website name], your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
-        </div>
+            <p>Welcome to [insert website name], your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p></div>
 <div>[Enter more of your own content here]</div>
             <!-- Jackie Wolf -->
         <div></div>
@@ -29,6 +28,5 @@
         <div></div>
         <div></div>
     </main>
-    
 </body>
 </html>
